# steammetadatatool

./: .gitignore  README.md  REUSE.toml  main.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
LICENSES/: LicenseRef-Proprietary.txt
data/: example-changes.json  io.github.ikajdan.steammetadatatool.desktop  io.github.ikajdan.steammetadatatool.metainfo.xml
data/i18n/: steammetadatatool.pot
data/i18n/en/LC_MESSAGES/: steammetadatatool.po
gui/: main.py
src/steammetadatatool/: __init__.py  i18n.py
src/steammetadatatool/cli/: __init__.py  __main__.py  main.py
src/steammetadatatool/core/: __init__.py  appinfo.py  binary.py  keyvalues1.py  models.py  services.py  use_cases.py  writer.py
src/steammetadatatool/gui/: app_data.py  app_theme.py  asset_optimizer.py  edit_assets_dialog.py  edit_metadata_dialog.py  main.py  search.py  steam_process.py  steam_user.py
src/steammetadatatool/gui/data/: json_helpers.py
src/steammetadatatool/gui/dialogs/: button_order.py  edit_assets.py  edit_metadata.py  message_box.py  missing_appinfo.py  steam_user.py
src/steammetadatatool/gui/models/: app_details.py  app_loader.py
src/steammetadatatool/gui/services/: asset_optimizer.py  icons.py  metadata_apply.py  positions_importer.py  theme.py
src/steammetadatatool/gui/steam/: assets.py  paths.py  text_vdf.py
src/steammetadatatool/gui/widgets/: __init__.py  delegates.py  empty_state.py  inline_edit.py  loading.py  previews.py  toast.py
tools/: build-appimage-entrypoint.sh  build-appimage.sh  manage-translations.sh
utils/: app_listing.py  changes.py  overrides.py  writer.py
