[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steammetadatatool"
version = "0.1.0"
description = "A tool for reading and editing Steam client metadata."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gui = [
  "PySide6>=6.6",
]

[project.scripts]
steammetadatatool-cli = "steammetadatatool.cli.main:main"
steammetadatatool-gui = "steammetadatatool.gui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
